Rantler/en 10490/fix text wrapping on login page (#3488)
* EN-10490: Decrease flash message padding

* ENG: Minor punctuation adjustments to login msgs

* ENG: Attempt to stabilize flaky tests

* ENG: Attempt to stabilize flaky tests

* ENG: Fixup flaky test

* ENG: One more try to fix flaky test

--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -192,8 +192,8 @@ html, body {
       @include sprite-menu-icons;
       margin: 0;
       position: absolute;
-      right: 5px;
-      top: 5px;
+      right: 0;
+      top: 4px;
     }
   }
 }
